Fixed broken filter logic